Refactor ejemplo de como usar variables con tailwindcss

--- a/src/components/Benefits.astro
+++ b/src/components/Benefits.astro
@@ -13,7 +13,7 @@ import Family from '../assets/svg/family.svg'
         <div>
             <div class="flex justify-start m-4">
                 <div>
-                    <Qr width={60} height={60} fill="#F28705"/>
+                    <Qr width={60} height={60} class="fill-primary" />
                 </div>
                 <div class="ml-2">
                     <h1 class="font-Oliciy text-2xl text-bold">Control por QR</h1>
