--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 
 ---
-<section class="relative bg-[#F28705] overflow-hidden">
+<section class="relative bg-primary overflow-hidden">
     <div class="bg-[url('/src/image/bg-icon-hero.webp')] bg-no-repeat">
         <div class=" grid md:grid-cols-2 items-center px-10 min-h-[90vh] relative z-10">
             <div class="flex flex-col items-center justify-center text-center gap-4">
