Refactor font management and update BenefitCard component styling

--- a/src/components/BenefitCard.astro
+++ b/src/components/BenefitCard.astro
@@ -14,7 +14,7 @@ const { title, subtitle } = Astro.props;
   <slot />
 
   <div>
-    <h1 class="text-xl text-bold">{title}</h1>
+    <h1 class="text-xl text-bold font-brand">{title}</h1>
     <h2 class="text-xl">
       {subtitle}
     </h2>
