--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,25 +1,28 @@
 ---
-import Hero from '../components/Hero.astro';
-import AboutUs from '../components/AboutUs.astro';
-import Benefits from '../components/Benefits.astro'
-import Testimonials from '../components/Testimonials.astro';
-import CallToAction from '../components/CallToAction.astro';
-import FAQ from '../components/FAQ.astro';
+import Hero from "../components/Hero.astro";
+import AboutUs from "../components/AboutUs.astro";
+import Benefits from "../components/Benefits.astro";
+import Testimonials from "../components/Testimonials.astro";
+import CallToAction from "../components/CallToAction.astro";
+import FAQ from "../components/FAQ.astro";
 
-import Layout from '../layouts/Layout.astro';
+import Layout from "../layouts/Layout.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
+  <Hero />
+  <AboutUs />
+  <Benefits />
+  <Testimonials />
+  <CallToAction />
+  <FAQ />
 
-    <Hero />
-    <AboutUs />
-    <Benefits />
-    <Testimonials />
-    <CallToAction />
-    <FAQ />
-
-
+  <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis
+    cupiditate error rem atque! A iste facilis vel, atque harum eveniet minima.
+    Sed tempore, nostrum ad commodi enim dolore nesciunt id.
+  </p>
 </Layout>
