--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,27 @@
 @import "tailwindcss";
 @import "./fonts.css";
 
+::root {
+    --background: #f2f2f2;
+    --foreground: #262626;
+}
+
+@media (prefers-color-scheme: dark) {
+    :root {
+        --background: #262626;
+        --foreground: #f2f2f2;
+    }
+}
+
 @theme {
     --color-primary: #F28705;
+
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
 
     --font-sans: "Nobel Uno", sans-serif;
     --font-brand: "Oliciy", sans-serif;
 }
+
+
+
