--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -27,7 +27,7 @@ import Layout from "../layouts/Layout.astro";
         </div>
         <div class="absolute bottom-0 left-0 w-full z-0">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 310" class="w-full h-auto">
-                <path fill="#ffffff" d="M0,160L80,176C160,192,320,224,480,202.7C640,181,800,107,960,69.3C1120,32,1280,32,1360,32L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"/>
+                <path class="fill-current text-background" d="M0,160L80,176C160,192,320,224,480,202.7C640,181,800,107,960,69.3C1120,32,1280,32,1360,32L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"/>
             </svg>
         </div>
 
