--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -1,12 +1,19 @@
 ---
-
+import Title from "./Title.astro";
 ---
+
 <section>
-    <div class=" mx-24 text-center rounded-3xl bg-[#f2f2f2]  inset-shadow-sm border-[#ffffff] drop-shadow-xl/50 p-12 border-2 border-solid ">
-        <h1 class="font-oliciy text-5xl text-primary font-bold pb-9">¿Qué somos?</h1>
-        <p class="font-NobelUno text-3xl">Somos la solución líder en el control de salidas escolares
-            diseñada para que las escuelas puedan ofrecer un entorno más seguro, organizado y eficiente.
-            Nuestra plataforma facilita el registro, autorización y supervisión de salidas de estudiantes
-            conectando de forma transparente a padres y personal escolar.</p>
-    </div>
+  <div
+    class="mx-24 text-center rounded-3xl inset-shadow-sm border-[#ffffff] drop-shadow-xl/50 p-12 border-2 border-solid"
+  >
+    <Title title="¿Qué somos?" />
+
+    <p class="text-3xl">
+      Somos la solución líder en el control de salidas escolares diseñada para
+      que las escuelas puedan ofrecer un entorno más seguro, organizado y
+      eficiente. Nuestra plataforma facilita el registro, autorización y
+      supervisión de salidas de estudiantes conectando de forma transparente a
+      padres y personal escolar.
+    </p>
+  </div>
 </section>
