--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,28 +1,23 @@
 ---
-import './src/styles/global.css';
-import Navbar from '../components/Navbar.astro';
+import "./src/styles/global.css";
+import Navbar from "../components/Navbar.astro";
 import Footer from "../components/Footer.astro";
-
 ---
-
-
-
 
 <!doctype html>
 <html lang="es">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
-	</head>
-	<body class="bg-background text-foreground font-sans">
-	<Navbar />
-	<main>
-		<slot />
-	</main>
-	<Footer />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>Ilogs</title>
+  </head>
+  <body class="bg-background text-foreground font-sans">
+    <Navbar />
+    <main>
+      <slot />
+    </main>
+    <Footer />
+  </body>
 </html>
-
