--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -4,7 +4,7 @@ import Title from "./Title.astro";
 
 <section>
   <div
-    class="mx-24 text-center rounded-3xl inset-shadow-sm border-[#ffffff] drop-shadow-xl/50 p-12 border-2 border-solid"
+    class="mx-24 text-center rounded-3xl border-[#ffffff] border-2 border-solid bg-white/30 backdrop-blur-md shadow-xl"
   >
     <Title title="¿Qué somos?" />
 
