add color variable

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -4,9 +4,9 @@ import Title from "./Title.astro";
 
 <section>
   <div
-    class="mx-24 text-center rounded-3xl border-[#ffffff] border-2 border-solid bg-white/30 backdrop-blur-md shadow-xl"
+    class="mx-24 text-center rounded-3xl p-20 shadow-lg"
   >
-    <Title title="¿Qué somos?" />
+    <Title title="¿Qué somos?"/>
 
     <p class="text-3xl">
       Somos la solución líder en el control de salidas escolares diseñada para
