--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -6,6 +6,6 @@ type Props = {
 const { title } = Astro.props;
 ---
 
-<h2 class="text-primary text-5xl font-brand text-center mb-9">
+<h2 class="text-primary text-5xl font-brand text-center m-10">
   {title}
 </h2>
