--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,6 +15,9 @@
 
 @theme inline {
     --color-primary: #F28705;
+    --color-secondary: #F27405;
+    --color-white-primary: #f2f2f2
+    
 
     --color-background: var(--background);
     --color-foreground: var(--foreground);
