--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -31,7 +31,7 @@ import Layout from "../layouts/Layout.astro";
         <img
           src="/src/image/MOCKUP-LOGIN.webp"
           alt="Mockup"
-          class="w-[1500px]"
+          class="w-full h-full"
         />
       </div>
     </div>
