--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -4,9 +4,11 @@ import Title from "./Title.astro";
 
 <section>
   <div
-    class="mx-24 text-center rounded-3xl p-20 shadow-lg"
+    class="mx-24 text-center rounded-3xl p-20 shadow-lg shadow-primary border-2 border-primary"
   >
-    <Title title="¿Qué somos?"/>
+  <div class="mb-9">
+ <Title title="¿Qué somos?"/>
+  </div>
 
     <p class="text-3xl">
       Somos la solución líder en el control de salidas escolares diseñada para
