--- a/src/components/Benefits.astro
+++ b/src/components/Benefits.astro
@@ -5,11 +5,14 @@ import Title from "./Title.astro";
 ---
 
 <section>
-  <Title title="Beneficios" />
-
+  <div class="mt-20">
+    <Title title="Beneficios" />
+  </div>
   <div class="flex gap-4">
-    <div class="w-full"></div>
-    <div class="w-full flex flex-col gap-11">
+    <div class="w-full align-center justify-items-center">
+      <img src="/src/image/MOKCUP-INICIO.webp" alt="" class="w-auto h-full" />
+    </div>
+    <div class="w-full flex flex-col justify-center gap-11">
       {
         benefits.map((benefit) => (
           <BenefitCard title={benefit.title} subtitle={benefit.subtitle}>
@@ -17,42 +20,6 @@ import Title from "./Title.astro";
           </BenefitCard>
         ))
       }
-
-      <!-- <div class="flex justify-start">
-            <div>
-              <Setting width={40} height={40} fill="#F28705" />
-            </div>
-            <div class="ml-2">
-              <h1>Fácil implementación</h1>
-              <h2>Integración sin complicaciones ni pérdida de tiempo.</h2>
-            </div>
-          </div>
-    
-          <div class="flex justify-start">
-            <div>
-              <Security width={40} height={40} fill="#F28705" />
-            </div>
-            <div class="ml-2">
-              <h1>Mayor seguridad</h1>
-              <h2>
-                Refuerza la seguridad escolar con procesos de salida totalmente
-                verificados.
-              </h2>
-            </div>
-          </div>
-    
-          <div class="flex justify-start">
-            <div>
-              <Family width={40} height={40} fill="#F28705" />
-            </div>
-            <div class="ml-2">
-              <h1>Colaboración con padres</h1>
-              <h2>
-                Facilita la comunicación y cooperación entre padres y personal
-                escolar.
-              </h2>
-            </div>
-          </div> -->
     </div>
   </div>
 </section>
