feat section CallToAction

--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -1,4 +1,23 @@
 ---
 
 ---
-<h1>Contactanos</h1>
+
+<section>
+  <div class="bg-primary">
+    <div class="bg-[url('/src/image/BG-2.webp')]  bg-no-repeat w-full h-full">
+      <div class="m-30 justify-items-center p-36">
+        <p class="text-3xl text-center mb-7">
+          Somos un equipo comprometido de profesionales dedicados a mejorar la
+          experiencia escolar y a proporcionar herramientas efectivas para el
+          control de salidas estudiantiles.
+        </p>
+        <a
+          href=""
+          class="font-Oliciy text-xl md:text-2xl bg-[#262626] text-[#f2f2f2] px-6 py-2 rounded-full hover:bg-[#f2f2f2] transition"
+        >
+          CONTACTANOS
+        </a>
+      </div>
+    </div>
+  </div>
+</section>
