--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -2,18 +2,19 @@
 
 ---
 
-<section>
-  <div class="bg-primary">
-    <div class="bg-[url('/src/image/BG-2.webp')]  bg-no-repeat w-full h-full">
-      <div class="m-30 justify-items-center p-36">
-        <p class="text-3xl text-center mb-7">
-          Somos un equipo comprometido de profesionales dedicados a mejorar la
-          experiencia escolar y a proporcionar herramientas efectivas para el
-          control de salidas estudiantiles.
+<section class="my-15 bg-primary">
+  <div class="">
+    <div class="bg-[url('/src/image/bg-CallToAction.webp')] bg-contain bg-no-repeat md:bg-cover">
+      <div class="justify-items-center p-10 md:p-45">
+        <p class="text-xl md:text-3xl text-center mb-10">
+          Somos un equipo comprometido de profesionales <br />
+          dedicados a mejorar la experiencia escolar y a <br />
+          proporcionar herramientas efectivas para el control de <br />
+          salidas estudiantiles.
         </p>
         <a
           href=""
-          class="font-Oliciy text-xl md:text-2xl bg-[#262626] text-[#f2f2f2] px-6 py-2 rounded-full hover:bg-[#f2f2f2] transition"
+          class="font-brand text-xs md:text-2xl text-light bg-dark px-10 py-2 rounded-full hover:bg-light transition hover:text-dark"
         >
           CONTACTANOS
         </a>
