Refactor Design Responsive

--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -4,13 +4,13 @@ import Title from "./Title.astro";
 
 <section>
   <div
-    class="mx-24 text-center rounded-3xl p-20 shadow-lg shadow-primary border-2 border-primary"
+    class=" mx-10 md:mx-24 text-center rounded-3xl p-10 md:p-20 shadow-lg shadow-primary border-2 border-primary"
   >
   <div class="mb-9">
  <Title title="¿Qué somos?"/>
   </div>
 
-    <p class="text-3xl">
+    <p class="text-xl md:text-3xl">
       Somos la solución líder en el control de salidas escolares diseñada para
       que las escuelas puedan ofrecer un entorno más seguro, organizado y
       eficiente. Nuestra plataforma facilita el registro, autorización y
