--- a/src/components/TestimonialsCard.astro
+++ b/src/components/TestimonialsCard.astro
@@ -7,13 +7,13 @@ const { name, message, estrella = 5} = Astro.props;
 
 <div>
     <slot/>
-  <div class="flex justify-start">
+  <div class="flex justify-start ">
     {Array.from({ length: estrella }).map(() => (
-      <Star width={24} height={24} class="fill-primary" />
+      <Star class="fill-primary w-3 h-3 md:w-6 md:h-6" />
     ))}
     </div>
- <h1 class="text-[20px] font-brand">{name}</h1>
-  <p class="text-2xl">{message}</p>
+ <h1 class="text-xs md:text-xl font-brand">{name}</h1>
+  <p class=" text-xs md:text-2xl">{message}</p>
   
 </div>
 
