--- a/src/components/Benefits.astro
+++ b/src/components/Benefits.astro
@@ -5,21 +5,21 @@ import Title from "./Title.astro";
 ---
 
 <section>
-  <div class="mt-20">
+  <div class="mt-10 mb-6 md:mt-20">
     <Title title="Beneficios" />
   </div>
-  <div class="flex gap-4">
-    <div class="w-full align-center justify-items-center">
-      <img src="/src/image/MOKCUP-INICIO.webp" alt="" class="w-auto h-full" />
-    </div>
-    <div class="w-full flex flex-col justify-center gap-11">
+    <div class="  flex flex-col md:flex-row gap-4">
+    <div class="w-full flex flex-col justify-center gap-5 md:gap-11 px-10 order-1 md:order-2">
       {
         benefits.map((benefit) => (
           <BenefitCard title={benefit.title} subtitle={benefit.subtitle}>
-            <benefit.icon width={58} height={58} class="fill-primary" />
+            <benefit.icon class="fill-primary w-6 h-6 md:w-15 md:h-15" />
           </BenefitCard>
         ))
       }
+    </div>
+        <div class=" w-full justify-items-center order-2 md:order-1">
+      <img src="/src/image/MOKCUP-INICIO.webp" alt="" class="w-65 h-70 md:w-auto md:h-full" />
     </div>
   </div>
 </section>
