--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -3,18 +3,18 @@
 ---
 
 <section class="my-15 bg-primary">
-  <div class="">
-    <div class="bg-[url('/src/image/bg-CallToAction.webp')] bg-contain bg-no-repeat md:bg-cover">
-      <div class="justify-items-center p-10 md:p-45">
-        <p class="text-xl md:text-3xl text-center mb-10">
+  <div class="w-full h-full">
+    <div class="bg-[url('/src/image/bg-CallToAction.webp')] bg-no-repeat bg-contain bg-bottom md:bg-contain">
+      <div class="justify-items-center p-6 md:p-45">
+        <p class="text-xs md:text-3xl text-center mb-4 md:mb-10">
           Somos un equipo comprometido de profesionales <br />
           dedicados a mejorar la experiencia escolar y a <br />
-          proporcionar herramientas efectivas para el control de <br />
+          proporcionar herramientas efectivas para el control de
           salidas estudiantiles.
         </p>
         <a
           href=""
-          class="font-brand text-xs md:text-2xl text-light bg-dark px-10 py-2 rounded-full hover:bg-light transition hover:text-dark"
+          class="font-brand text-xs md:text-2xl text-light bg-dark px-4 py-1 rounded-full hover:bg-light transition hover:text-dark"
         >
           CONTACTANOS
         </a>
