Refactor style title

--- a/src/components/Benefits.astro
+++ b/src/components/Benefits.astro
@@ -19,7 +19,7 @@ import Title from "./Title.astro";
       }
     </div>
         <div class=" w-full justify-items-center order-2 md:order-1">
-      <img src="/src/image/MOKCUP-INICIO.webp" alt="" class="w-65 h-70 md:w-auto md:h-full" />
+      <img src="/src/image/MOKCUP-INICIO.webp" alt="" class="w-65 h-70 md:w-2xl md:h-[690px]" />
     </div>
   </div>
 </section>
