--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,45 +2,39 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<section class="relative bg-primary overflow-hidden">
-  <div class="bg-[url('/src/image/bg-icon-hero.webp')] bg-no-repeat">
-    <div
-      class="grid md:grid-cols-2 items-center px-10 min-h-[90vh] relative z-10"
-    >
-      <div class="flex flex-col items-center justify-center text-center gap-4">
-        <h1
-          class="font-brand text-3xl md:text-5xl text-[#f2f2f2] leading-tight"
-        >
+<section class="bg-primary relative overflow-hidden pt-15">
+  <div class="bg-[url('/src/image/bg-hero.webp')] bg-no-repeat bg-contain">
+    <div class=" flex flex-col md:flex-row gap-4 relative z-10">
+      <div
+        class="w-full flex flex-col items-center justify-center text-center gap-4 z-10 px-4 md:px-0"
+      >
+        <h1 class="font-brand text-xl md:text-4xl text-light">
           SOLUCIÓN SEGURA Y <br />
           EFICIENTE <br />
           PARA EL CONTROL DE <br />
           SALIDAS ESCOLARES
         </h1>
-        <p class="text-base md:text-lg text-[#f2f2f2]">
+        <p class="text-xs md:text-xl text-light">
           Optimiza tus procesos escolares y ofrece tranquilidad a padres y
           docentes.
         </p>
         <a
           href=""
-          class="font-Oliciy text-xl md:text-2xl bg-[#262626] text-[#f2f2f2] px-6 py-2 rounded-full hover:bg-[#f2f2f2] transition"
+          class="font-brand text-xs md:text-2xl text-light bg-dark px-10 py-2 rounded-full hover:bg-light transition hover:text-dark"
         >
           CONTACTANOS
         </a>
       </div>
-      <div>
+      <div class="w-full flex justify-end relative z-30 mt-[-40px] md:m-[-100px]">
         <img
           src="/src/image/MOCKUP-LOGIN.webp"
           alt="Mockup"
-          class="w-full h-full"
+          class=" w-88 h- md:w-4xl md:h-[597px] "
         />
       </div>
     </div>
-    <div class="absolute bottom-0 left-0 w-full z-0">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 1440 310"
-        class="w-full h-auto"
-      >
+    <div class="relative  z-0">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 310">
         <path
           class="fill-current text-background"
           d="M0,160L80,176C160,192,320,224,480,202.7C640,181,800,107,960,69.3C1120,32,1280,32,1360,32L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
