Feat Animation Scroll

--- a/src/components/Benefits.astro
+++ b/src/components/Benefits.astro
@@ -4,12 +4,14 @@ import BenefitCard from "./BenefitCard.astro";
 import Title from "./Title.astro";
 ---
 
-<section>
+<section class="scroll-section opacity-0">
   <div class="mt-10 mb-6 md:mt-20">
     <Title title="Beneficios" />
   </div>
-    <div class="  flex flex-col md:flex-row gap-4">
-    <div class="w-full flex flex-col justify-center gap-5 md:gap-11 px-10 order-1 md:order-2">
+  <div class="flex flex-col md:flex-row gap-4">
+    <div
+      class="w-full flex flex-col justify-center gap-5 md:gap-11 px-10 order-1 md:order-2"
+    >
       {
         benefits.map((benefit) => (
           <BenefitCard title={benefit.title} subtitle={benefit.subtitle}>
@@ -18,8 +20,12 @@ import Title from "./Title.astro";
         ))
       }
     </div>
-        <div class=" w-full justify-items-center order-2 md:order-1">
-      <img src="/src/image/MOKCUP-INICIO.webp" alt="" class="w-65 h-70 md:w-2xl md:h-[690px]" />
+    <div class="w-full justify-items-center order-2 md:order-1">
+      <img
+        src="/src/image/MOKCUP-INICIO.webp"
+        alt=""
+        class="w-65 h-70 md:w-2xl md:h-[690px]"
+      />
     </div>
   </div>
 </section>
