--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -2,15 +2,16 @@
 
 ---
 
-<section class="my-15 bg-primary">
+<section class="scroll-section opacity-0 my-15 bg-primary">
   <div class="w-full h-full">
-    <div class="bg-[url('/src/image/bg-CallToAction.webp')] bg-no-repeat bg-contain bg-bottom md:bg-contain">
+    <div
+      class="bg-[url('/src/image/bg-CallToAction.webp')] bg-no-repeat bg-contain bg-bottom md:bg-contain"
+    >
       <div class="justify-items-center p-6 md:p-45">
         <p class="text-xs md:text-3xl text-center mb-4 md:mb-10">
           Somos un equipo comprometido de profesionales <br />
           dedicados a mejorar la experiencia escolar y a <br />
-          proporcionar herramientas efectivas para el control de
-          salidas estudiantiles.
+          proporcionar herramientas efectivas para el control de salidas estudiantiles.
         </p>
         <a
           href=""
