--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -1,4 +1,7 @@
 ---
-
+import Title from "./Title.astro";
 ---
-<h1>Preguntas Frecuentes</h1>
+
+<section class="scroll-section">
+  <Title title="Preguntas Frecuentes" />
+</section>
