--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,5 +19,24 @@ import Footer from "../components/Footer.astro";
       <slot />
     </main>
     <Footer />
+    <script type="module">
+      import {
+        animate,
+        inView,
+      } from "https://cdn.jsdelivr.net/npm/motion@12.16.0/+esm";
+
+      inView(".scroll-section", (element) => {
+        animate(
+          element,
+          { opacity: 1, x: [-100, 0] },
+          {
+            duration: 0.9,
+            easing: [0.17, 0.55, 0.55, 1],
+          }
+        );
+
+        return () => animate(element, { opacity: 0, x: -100 });
+      });
+    </script>
   </body>
 </html>
