--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -2,13 +2,13 @@
 import Title from "./Title.astro";
 ---
 
-<section>
+<section class="scroll-section">
   <div
-    class=" mx-10 md:mx-24 text-center rounded-3xl p-10 md:p-20 shadow-lg shadow-primary border-2 border-primary"
+    class="mx-10 md:mx-24 text-center rounded-3xl p-10 md:p-20 shadow-lg shadow-primary border-2 border-primary"
   >
-  <div class=" mb-3 md:mb-9">
- <Title title="¿Qué somos?"/>
-  </div>
+    <div class="mb-3 md:mb-9">
+      <Title title="¿Qué somos?" />
+    </div>
 
     <p class="text-xs md:text-3xl">
       Somos la solución líder en el control de salidas escolares diseñada para
