--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,12 +1,14 @@
 ---
-import Layout from "../layouts/Layout.astro";
+
 ---
 
-<section class="bg-primary relative overflow-hidden pt-15">
+<section
+  class="scroll-section opacity-0 bg-primary relative overflow-hidden pt-20 md:pt-45"
+>
   <div class="bg-[url('/src/image/bg-hero.webp')] bg-no-repeat bg-contain">
-    <div class=" flex flex-col md:flex-row gap-4 relative z-10">
+    <div class="flex flex-col md:flex-row gap-4 relative z-10">
       <div
-        class="w-full flex flex-col items-center justify-center text-center gap-4 z-10 px-4 md:px-0"
+        class="w-full flex flex-col items-center justify-center text-center gap-4 z-0 px-4 md:px-0"
       >
         <h1 class="font-brand text-xl md:text-4xl text-light">
           SOLUCIÓN SEGURA Y <br />
@@ -20,20 +22,20 @@ import Layout from "../layouts/Layout.astro";
         </p>
         <a
           href=""
-          class="font-brand text-xs md:text-2xl text-light bg-dark px-10 py-2 rounded-full hover:bg-light transition hover:text-dark"
+          class="box font-brand text-xs md:text-2xl text-light bg-dark px-10 py-2 rounded-full hover:bg-light transition hover:text-dark"
         >
           CONTACTANOS
         </a>
       </div>
-      <div class="w-full flex justify-end relative z-30 mt-[-40px] md:m-[-100px]">
+      <div class="w-full flex p-5 relative z-20 mt-[-40px] md:m-[-190px]">
         <img
           src="/src/image/MOCKUP-LOGIN.webp"
           alt="Mockup"
-          class=" w-88 h- md:w-4xl md:h-[597px] "
+          class="w-88 h- md:w-4xl md:h-[597px] object-contain"
         />
       </div>
     </div>
-    <div class="relative  z-0">
+    <div class="relative z-0">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 310">
         <path
           class="fill-current text-background"
