--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -4,7 +4,7 @@ import TestimonialsCard from "./TestimonialsCard.astro";
 import Title from "./Title.astro";
 ---
 
-<section>
+<section class="scroll-section opacity-0">
   <div class="mb-6 :mb-15">
     <Title title="Testimonios" />
   </div>
@@ -19,7 +19,9 @@ import Title from "./Title.astro";
         allowfullscreen
         class="w-80 h-50 md:w-[710px] md:h-[439px]"></iframe>
     </div>
-    <div class="w-full flex flex-col justify-center gap-6 px-15 pt-6 md:pt-0 md:px-30">
+    <div
+      class="w-full flex flex-col justify-center gap-6 px-15 pt-6 md:pt-0 md:px-30"
+    >
       {
         testimonios.map((testimonios) => (
           <TestimonialsCard
