--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -1,7 +1,50 @@
 ---
 import Title from "./Title.astro";
+
+const faqs = [
+  {
+    question: "¿Cómo funciona la app?",
+    answer: "La app permite registrar salidas seguras en tiempo real.",
+  },
+  {
+    question: "¿Necesito internet?",
+    answer: "Sí, para sincronizar los registros en la nube.",
+  },
+  {
+    question: "¿Qué dispositivos son compatibles?",
+    answer: "Funciona en cualquier navegador moderno.",
+  },
+];
 ---
 
-<section class="scroll-section">
-  <Title title="Preguntas Frecuentes" />
+<section class="scroll-section max-w-4xl rounded-2xl px-5 py-20 md:mx-auto">
+  <div class="mb-10">
+    <Title title="Preguntas Frecuentes" />
+  </div>
+  <ul>
+    {
+      faqs.map((faq) => (
+        <li class="mb-4">
+          <details class="group rounded-xl border border-transparent transition-all duration-300 hover:border-primary hover:shadow-xl">
+            <summary class="focus-visible:primary duration-600 flex justify-between cursor-pointer select-none items-center gap-3 px-6 py-4 text-sm font-bold  outline-none transition-all focus-visible:ring-2 group-open:text-primary lg:text-lg">
+              {faq.question}
+              <svg
+                class="mr-1 inline-block h-7 w-7 flex-shrink-0  transition-transform duration-300 group-open:rotate-180 lg:h-5 lg:w-5"
+                fill="current"
+                stroke="currentColor"
+                stroke-width="3"
+                viewBox="0 0 24 24"
+                aria-hidden="true"
+              >
+                <path d="M6 9l6 6 6-6" />
+              </svg>
+            </summary>
+            <div class="px-8 pb-4 pt-1 font-sans text-base leading-relaxed  opacity-95 transition-all duration-300 [text-transform:none]">
+              <p set:html={faq.answer} />
+            </div>
+          </details>
+        </li>
+      ))
+    }
+  </ul>
 </section>
