--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,4 +1,13 @@
 ---
 
 ---
-<h1> Esto es el footer</h1>
+<footer class="bg-secondary  flex flex-wrap justify-around items-center">
+    <div>
+    <img src="/src/image/logo.webp" alt="Ilogs" class="w-14  h-14  md:w-20 md:h-20"/>
+    </div>
+    <div>
+        <img src="/src/image/googleplay-appstore.webp" alt="Ilogs" class="w-auto md:h-[53px]"/>
+    </div>
+    <div> <h2>Copyright 2025</h2></div>
+
+</footer>
