--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -22,7 +22,7 @@
         </p>
         <a
           href=""
-          class="box font-brand text-xs md:text-2xl text-light bg-dark px-10 py-2 rounded-full hover:bg-light transition hover:text-dark"
+          class="button font-brand text-xs md:text-2xl text-light bg-dark px-10 py-2 rounded-full hover:bg-light transition hover:text-dark"
         >
           CONTACTANOS
         </a>
