--- a/src/components/AboutUs.astro
+++ b/src/components/AboutUs.astro
@@ -2,7 +2,7 @@
 import Title from "./Title.astro";
 ---
 
-<section class="scroll-section mt-10">
+<section class="scroll-section p-5 pt-35 md:pt-20 md:p-20">
   <div
     class="mx-10 md:mx-24 text-center rounded-3xl p-10 md:p-20 shadow-lg shadow-primary border-2 border-primary"
   >
