--- a/src/components/BenefitCard.astro
+++ b/src/components/BenefitCard.astro
@@ -12,7 +12,7 @@ const { title, subtitle } = Astro.props;
   <slot />
   <div>
     <h1 class=" text-xs md:text-xl text-bold font-brand">{title}</h1>
-    <h2 class=" text-xs md:text-xl">
+    <h2 class=" text-xs md:text-2xl">
       {subtitle}
     </h2>
   </div>
