--- a/src/components/Benefits.astro
+++ b/src/components/Benefits.astro
@@ -4,7 +4,7 @@ import BenefitCard from "./BenefitCard.astro";
 import Title from "./Title.astro";
 ---
 
-<section class="scroll-section opacity-0">
+<section class="scroll-section p-5 md:p-20">
   <div class="mt-10 mb-6 md:mt-20">
     <Title title="Beneficios" />
   </div>
@@ -22,7 +22,7 @@ import Title from "./Title.astro";
     </div>
     <div class="w-full justify-items-center order-2 md:order-1">
       <img
-        src="/src/image/MOKCUP-INICIO.webp"
+        src="image/MOKCUP-INICIO.webp"
         alt=""
         class="w-65 h-70 md:w-2xl md:h-[690px]"
       />
