--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,46 +2,44 @@
 
 ---
 
-<section
-  class="scroll-section opacity-0 bg-primary relative overflow-hidden pt-20 md:pt-45"
->
-  <div class="bg-[url('/src/image/bg-hero.webp')] bg-no-repeat bg-contain">
-    <div class="flex flex-col md:flex-row gap-4 relative z-10">
-      <div
-        class="w-full flex flex-col items-center justify-center text-center gap-4 z-0 px-4 md:px-0"
-      >
-        <h1 class="font-brand text-xl md:text-4xl text-light">
-          SOLUCIÓN SEGURA Y <br />
-          EFICIENTE <br />
-          PARA EL CONTROL DE <br />
-          SALIDAS ESCOLARES
-        </h1>
-        <p class="text-xs md:text-xl text-light">
-          Optimiza tus procesos escolares y ofrece tranquilidad a padres y
-          docentes.
-        </p>
-        <a
-          href=""
-          class="button font-brand text-xs md:text-2xl text-light bg-dark px-10 py-2 rounded-full hover:bg-light transition hover:text-dark"
+<section class="bg-primary overflow-hidden">
+  <div
+    class="relative bg-[url('image/bg-hero2.webp')] bg-no-repeat bg-contain bg-center md:bg-[url('image/bg-hero.webp')]"
+  > 
+      <div class="scroll-section flex flex-col md:flex-row items-center  ">
+        <div
+          class="w-full flex flex-col items-center text-center justify-center mt-25 md:mt-35"
         >
-          CONTACTANOS
-        </a>
+          <h1 class="scroll-section font-brand text-xl md:text-4xl text-light">
+            SOLUCIÓN SEGURA Y <br />
+            EFICIENTE <br />
+            PARA EL CONTROL DE <br />
+            SALIDAS ESCOLARES
+          </h1>
+          <p class="text-xs md:text-xl text-light">
+            Optimiza tus procesos escolares y ofrece tranquilidad<br /> a padres
+            y docentes.
+          </p>
+          <a
+            href=""
+            class="button font-brand text-xs md:text-2xl text-light bg-dark px-10 py-2 rounded-full hover:bg-light transition hover:text-dark"
+          >
+            CONTACTANOS
+          </a>
+        </div>
+        <div class="w-full">
+          <img
+            src="image/MOCKUP-LOGIN.webp"
+            alt="Mockup"
+            class="w-88 h- md:w-4xl md:h-[597px] align-center absolute z-15 top-65 md:top-10"
+          />
+        </div>
       </div>
-      <div class="w-full flex p-5 relative z-20 mt-[-40px] md:m-[-190px]">
-        <img
-          src="/src/image/MOCKUP-LOGIN.webp"
-          alt="Mockup"
-          class="w-88 h- md:w-4xl md:h-[597px] object-contain"
-        />
-      </div>
-    </div>
-    <div class="relative z-0">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 310">
-        <path
-          class="fill-current text-background"
-          d="M0,160L80,176C160,192,320,224,480,202.7C640,181,800,107,960,69.3C1120,32,1280,32,1360,32L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
-        ></path>
-      </svg>
-    </div>
+       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 310" class="bottom-0 relative z-0">
+      <path
+        class="fill-current text-background"
+        d="M0,160L80,176C160,192,320,224,480,202.7C640,181,800,107,960,69.3C1120,32,1280,32,1360,32L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"
+      ></path>
+    </svg>
   </div>
 </section>
