--- a/src/components/Testimonials.astro
+++ b/src/components/Testimonials.astro
@@ -4,7 +4,7 @@ import TestimonialsCard from "./TestimonialsCard.astro";
 import Title from "./Title.astro";
 ---
 
-<section class="scroll-section opacity-0">
+<section class="scroll-section p-5 md:p-20">
   <div class="mb-6 :mb-15">
     <Title title="Testimonios" />
   </div>
