--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ import Footer from "../components/Footer.astro";
     <meta name="generator" content={Astro.generator} />
     <title>Ilogs</title>
   </head>
-  <body class="bg-background text-foreground font-sans">
+  <body class="bg-background text-foreground font-sans absolute">
     <Navbar />
     <main>
       <slot />
