--- a/src/components/CallToAction.astro
+++ b/src/components/CallToAction.astro
@@ -2,20 +2,20 @@
 
 ---
 
-<section class="scroll-section opacity-0 my-15 bg-primary">
-  <div class="w-full h-full">
+<section class="my-15 bg-primary p-8">
+  <div class="scroll-section w-full h-full">
     <div
-      class="bg-[url('/src/image/bg-CallToAction.webp')] bg-no-repeat bg-contain bg-bottom md:bg-contain"
+      class="bg-[url('image/bg-CallToAction.webp')] bg-no-repeat bg-contain bg-bottom md:bg-contain"
     >
       <div class="justify-items-center p-6 md:p-45">
         <p class="text-xs md:text-3xl text-center mb-4 md:mb-10 text-light">
           Somos un equipo comprometido de profesionales <br />
           dedicados a mejorar la experiencia escolar y a <br />
-          proporcionar herramientas efectivas para el control de salidas estudiantiles.
+          proporcionar herramientas efectivas para el control <br /> de salidas estudiantiles.
         </p>
         <a
           href=""
-          class="button font-brand text-xs md:text-2xl text-light bg-dark px-10 py-1 rounded-full hover:bg-light transition hover:text-dark"
+          class="button font-brand text-xs md:text-2xl text-light bg-dark px-5 md:px-10 py-1 rounded-full hover:bg-light transition hover:text-dark"
         >
           CONTACTANOS
         </a>
