--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -17,7 +17,7 @@ const faqs = [
 ];
 ---
 
-<section class="scroll-section max-w-4xl rounded-2xl px-5 py-20 md:mx-auto">
+<section class="scroll-section rounded-2xl p-5 md:p-20 md:mx-auto">
   <div class="mb-10">
     <Title title="Preguntas Frecuentes" />
   </div>
@@ -26,7 +26,7 @@ const faqs = [
       faqs.map((faq) => (
         <li class="mb-4">
           <details class="group rounded-xl border border-transparent transition-all duration-300 hover:border-primary hover:shadow-xl">
-            <summary class="focus-visible:primary duration-600 flex justify-between cursor-pointer select-none items-center gap-3 px-6 py-4 text-sm font-bold  outline-none transition-all focus-visible:ring-2 group-open:text-primary lg:text-lg">
+            <summary class="focus-visible:primary duration-600 flex justify-between cursor-pointer select-none items-center gap-3 px-6 py-2 md:py-4 text-xs font-bold  outline-none transition-all focus-visible:ring-2 group-open:text-primary lg:text-xl">
               {faq.question}
               <svg
                 class="mr-1 inline-block h-7 w-7 flex-shrink-0  transition-transform duration-300 group-open:rotate-180 lg:h-5 lg:w-5"
@@ -39,7 +39,7 @@ const faqs = [
                 <path d="M6 9l6 6 6-6" />
               </svg>
             </summary>
-            <div class="px-8 pb-4 pt-1 font-sans text-base leading-relaxed  opacity-95 transition-all duration-300 [text-transform:none]">
+            <div class="px-8 pb-4 pt-1  text-xs leading-relaxed  opacity-95 transition-all duration-300 [text-transform:none] md:text-xl">
               <p set:html={faq.answer} />
             </div>
           </details>
