--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -4,8 +4,8 @@ import Email from "../assets/svg/email.svg";
 import Facebook from "../assets/svg/facebook.svg";
 ---
 
-<nav class="fixed flex justify-between bg-secondary px-8 z-50 w-full h-16">
-  <img src="/src/image/logo.webp" alt="Ilogs" class="w-auto md:h-[80px]" />
+<nav class="fixed flex justify-between bg-secondary px-8 z-50 w-full h-16 items-center">
+  <img src="image/logo.webp" alt="Ilogs" class="w-12 h-12 md:w-20 md:h-20" />
 
   <div class="flex flex-row p-3 gap-3">
     <a href="" class="box w-6 h-6 md:w-10 md:h-10 fill-light"> <Email /> </a>
