--- a/src/components/Benefits.astro
+++ b/src/components/Benefits.astro
@@ -4,30 +4,32 @@ import BenefitCard from "./BenefitCard.astro";
 import Title from "./Title.astro";
 ---
 
-<section class="benefits p-5 md:p-20">
-  <div class="benefits-card mt-10 mb-6 md:mt-20">
-    <Title title="Beneficios" />
-  </div>
-  <div class="flex flex-col md:flex-row gap-4">
-    <div
-      class="w-full flex flex-col justify-center gap-5 md:gap-11 px-10 order-1 md:order-2"
-    >
-      {
-        benefits.map((benefit) => (
-          <div class="benefits-card">
-            <BenefitCard title={benefit.title} subtitle={benefit.subtitle}>
-              <benefit.icon class="fill-primary w-6 h-6 md:w-15 md:h-15" />
-            </BenefitCard>
-          </div>
-        ))
-      }
+<section class="p-5 md:p-20">
+  <div class="benefits">
+    <div class="benefits-card mt-10 mb-6 md:mt-20">
+      <Title title="Beneficios" />
     </div>
-    <div class="w-full justify-items-center order-2 md:order-1">
-      <img
-        src="image/MOKCUP-INICIO.webp"
-        alt=""
-        class="benefits-image w-65 h-70 md:w-2xl md:h-[690px]"
-      />
+    <div class="flex flex-col md:flex-row gap-4">
+      <div
+        class="w-full flex flex-col justify-center gap-5 md:gap-11 px-10 order-1 md:order-2"
+      >
+        {
+          benefits.map((benefit) => (
+            <div class="benefits-card">
+              <BenefitCard title={benefit.title} subtitle={benefit.subtitle}>
+                <benefit.icon class="fill-primary w-6 h-6 md:w-15 md:h-15" />
+              </BenefitCard>
+            </div>
+          ))
+        }
+      </div>
+      <div class="w-full justify-items-center order-2 md:order-1">
+        <img
+          src="image/MOKCUP-INICIO.webp"
+          alt=""
+          class="benefits-image w-65 h-70 md:w-2xl md:h-[690px]"
+        />
+      </div>
     </div>
   </div>
 </section>
@@ -45,17 +47,17 @@ import Title from "./Title.astro";
     stagger: 0.2,
     scrollTrigger: {
       trigger: ".benefits",
-      start: "top 80%",
+      start: "top 60%",
       toggleActions: "play reset play reset",
     },
   });
   gsap.from(".benefits-image", {
-    x: 150,
+    x: 70,
     opacity: 0,
     duration: 1,
     scrollTrigger: {
       trigger: ".benefits",
-      start: "top 80%",
+      start: "top 60%",
       toggleActions: "play reset play reset",
     },
   });
