--- a/src/components/FAQ.astro
+++ b/src/components/FAQ.astro
@@ -17,34 +17,57 @@ const faqs = [
 ];
 ---
 
-<section class="scroll-section rounded-2xl p-5 md:p-20 md:mx-auto">
-  <div class="mb-10">
-    <Title title="Preguntas Frecuentes" />
-  </div>
-  <ul>
-    {
-      faqs.map((faq) => (
-        <li class="mb-4">
-          <details class="group rounded-xl border border-transparent transition-all duration-300 hover:border-primary hover:shadow-xl">
-            <summary class="focus-visible:primary duration-600 flex justify-between cursor-pointer select-none items-center gap-3 px-6 py-2 md:py-4 text-xs font-bold  outline-none transition-all focus-visible:ring-2 group-open:text-primary lg:text-xl">
-              {faq.question}
-              <svg
-                class="mr-1 inline-block h-7 w-7 flex-shrink-0  transition-transform duration-300 group-open:rotate-180 lg:h-5 lg:w-5"
-                fill="current"
-                stroke="currentColor"
-                stroke-width="3"
-                viewBox="0 0 24 24"
-                aria-hidden="true"
-              >
-                <path d="M6 9l6 6 6-6" />
-              </svg>
-            </summary>
-            <div class="px-8 pb-4 pt-1  text-xs leading-relaxed  opacity-95 transition-all duration-300 [text-transform:none] md:text-xl">
-              <p set:html={faq.answer} />
+<section class="rounded-2xl p-5 md:p-20 md:mx-auto">
+  <div class="faq">
+    <div class="faq-question mb-10">
+      <Title title="Preguntas Frecuentes" />
+    </div>
+    <ul>
+      {
+        faqs.map((faq) => (
+          <li class="mb-4">
+            <div class="faq-question">
+              <details class="group rounded-xl border border-transparent transition-all duration-300 hover:border-primary hover:shadow-xl">
+                <summary class=" focus-visible:primary duration-600 flex justify-between cursor-pointer select-none items-center gap-3 px-6 py-2 md:py-4 text-xs font-bold  outline-none transition-all focus-visible:ring-2 group-open:text-primary lg:text-xl">
+                  {faq.question}
+                  <svg
+                    class="mr-1 inline-block h-7 w-7 flex-shrink-0  transition-transform duration-300 group-open:rotate-180 lg:h-5 lg:w-5"
+                    fill="current"
+                    stroke="currentColor"
+                    stroke-width="3"
+                    viewBox="0 0 24 24"
+                    aria-hidden="true"
+                  >
+                    <path d="M6 9l6 6 6-6" />
+                  </svg>
+                </summary>
+                <div class="px-8 pb-4 pt-1  text-xs leading-relaxed  opacity-95 transition-all duration-300 [text-transform:none] md:text-xl">
+                  <p set:html={faq.answer} />
+                </div>
+              </details>
             </div>
-          </details>
-        </li>
-      ))
-    }
-  </ul>
+          </li>
+        ))
+      }
+    </ul>
+  </div>
 </section>
+<script>
+  import { gsap } from "gsap";
+  import { ScrollTrigger } from "gsap/ScrollTrigger";
+
+  gsap.registerPlugin(ScrollTrigger);
+
+  gsap.from(".faq-question", {
+    opacity: 0,
+    y: 100,
+    stagger: 0.25,
+    duration: 1,
+    delay: 0.3,
+    scrollTrigger: {
+      trigger: ".faq",
+      start: "top 80%",
+      toggleActions: "play reset play reset",
+    },
+  });
+</script>
