--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -12,6 +12,10 @@ import Footer from "../components/Footer.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>Ilogs</title>
+    <meta property="og:title" content="iLogs" />
+    <meta property="og:description" content="" />
+    <meta property="og:url" content="https://descubre.ilogs.com.mx/" />
+    <meta property="og:image" content="/image/BannerOG.webp"/>
   </head>
   <body class="bg-background text-foreground font-sans absolute">
     <Navbar />
@@ -41,12 +45,12 @@ import Footer from "../components/Footer.astro";
 
         return () => animate(element, { opacity: 0, x: -100 });
       });
-       press(".button", (element) => {
-        animate(element, { scale: 0.8 }, { type: "spring", stiffness: 1000 })
+      press(".button", (element) => {
+        animate(element, { scale: 0.8 }, { type: "spring", stiffness: 1000 });
 
         return () =>
-            animate(element, { scale: 1 }, { type: "spring", stiffness: 500 })
-    })
+          animate(element, { scale: 1 }, { type: "spring", stiffness: 500 });
+      });
     </script>
   </body>
 </html>
